--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>project</title>
     <link rel="stylesheet" href="/static/css/reset.css">
     <script type="text/javascript" src="/static/live2dw/lib/L2Dwidget.min.js"></script>
