--- a/index.html
+++ b/index.html
@@ -1,64 +1,171 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+    />
     <title>project</title>
-    <link rel="stylesheet" href="/static/css/reset.css">
-    <script type="text/javascript" src="/static/live2dw/lib/L2Dwidget.min.js"></script>
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/static/css/reset.css" />
+    <script
+      type="text/javascript"
+      src="/static/live2dw/lib/L2Dwidget.min.js"
+    ></script>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
     <style type="text/css">
-      #Loading {
-        top:50%;
-        left:50%;
+    .page{
+      width: 100vw;
+      height: 100vh;
+      background-color: #7b1fa2;
+      position: fixed;
+      left: 0;
+      top: 0;
+    }
+      .cp-preloader {
         position: absolute;
-        -webkit-transform: translateY(-50%)  translateX(-50%);
-        transform: translateY(-50%)  translateX(-50%);
-        z-index:100;
+        top: 50%;
+        left: 50%;
+        z-index: 99999;
+        transform: translate3d(-50%, -50%, 0);
       }
-      @-webkit-keyframes ball-beat {
-        50% {
-          opacity: 0.2;
-          -webkit-transform: scale(0.75);
-          transform: scale(0.75); }
 
-        100% {
-          opacity: 1;
-          -webkit-transform: scale(1);
-          transform: scale(1); } }
+      .cp-preloader {
+        width: 100%;
+        text-align: center;
+      }
 
-      @keyframes ball-beat {
-        50% {
-          opacity: 0.2;
-          -webkit-transform: scale(0.75);
-          transform: scale(0.75); }
-
-        100% {
-          opacity: 1;
-          -webkit-transform: scale(1);
-          transform: scale(1); } }
-
-      .ball-beat > div {
-        background-color: #279fcf;
-        width: 30px;
-        height: 30px;
-        border-radius: 100% !important;
-        margin: 2px;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
+      .cp-preloader__letter {
         display: inline-block;
-        animation: ball-beat 0.7s 0s infinite linear; }
-      .ball-beat > div:nth-child(2n-1) {
-        animation-delay: 0.35s !important; }
-    </style>
+        position: relative;
+        overflow: hidden;
+        color: rgba(0, 0, 0, 0.3);
+      }
 
+      .cp-preloader__letter:before {
+        content: attr(data-preloader);
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-fill-mode: backwards;
+      }
+
+      .cp-preloader__letter:nth-child(2):before {
+        -webkit-animation-delay: 0.3s;
+        animation-delay: 0.3s;
+      }
+
+      .cp-preloader__letter:nth-child(3):before {
+        -webkit-animation-delay: 0.45s;
+        animation-delay: 0.45s;
+      }
+
+      .cp-preloader__letter:nth-child(4):before {
+        -webkit-animation-delay: 0.6s;
+        animation-delay: 0.6s;
+      }
+
+      .cp-preloader__letter:nth-child(5):before {
+        -webkit-animation-delay: 0.75s;
+        animation-delay: 0.75s;
+      }
+
+      .cp-preloader__letter:nth-child(6):before {
+        -webkit-animation-delay: 0.9s;
+        animation-delay: 0.9s;
+      }
+
+      .cp-preloader__letter:nth-child(7):before {
+        -webkit-animation-delay: 1.05s;
+        animation-delay: 1.05s;
+      }
+
+      .cp-preloader_type3 .cp-preloader__letter:before {
+        -webkit-transform-origin: 0 50%;
+        transform-origin: 0 50%;
+        -webkit-animation-name: cp-preloader3;
+        animation-name: cp-preloader3;
+      }
+
+      @-webkit-keyframes cp-preloader3 {
+        0%,
+        100% {
+          -webkit-transform: rotateY(-90deg);
+          transform: rotateY(-90deg);
+          opacity: 0;
+        }
+
+        20%,
+        50% {
+          -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+          opacity: 1;
+        }
+
+        65% {
+          -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+          opacity: 0.3;
+        }
+
+        80% {
+          opacity: 0;
+        }
+      }
+
+      @keyframes cp-preloader3 {
+        0%,
+        100% {
+          -webkit-transform: rotateY(-90deg);
+          transform: rotateY(-90deg);
+          opacity: 0;
+        }
+
+        20%,
+        50% {
+          -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+          opacity: 1;
+        }
+
+        65% {
+          -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+          opacity: 0.3;
+        }
+
+        80% {
+          opacity: 0;
+        }
+      }
+      .cp-preloader__letter {
+        font-size: 28px;
+      }
+
+      .cp-preloader__letter:before {
+        color: #fff;
+      }
+
+      .cp-preloader_type10:before,
+      .cp-preloader_type10:after {
+        background-color: #fefefe;
+      }
+
+    </style>
   </head>
   <body>
-    <div id="Loading">
-      <div class="loader-inner ball-beat">
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="page" id="Loading">
+      <div class="cp-preloader cp-preloader_type3">
+        <span class="cp-preloader__letter" data-preloader="L">L</span>
+        <span class="cp-preloader__letter" data-preloader="O">O</span>
+        <span class="cp-preloader__letter" data-preloader="A">A</span>
+        <span class="cp-preloader__letter" data-preloader="D">D</span>
+        <span class="cp-preloader__letter" data-preloader="I">I</span>
+        <span class="cp-preloader__letter" data-preloader="N">N</span>
+        <span class="cp-preloader__letter" data-preloader="G">G</span>
       </div>
     </div>
     <div id="app"></div>
