--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .page{
       width: 100vw;
       height: 100vh;
-      background-color: #7b1fa2;
+      background-color:LightSkyBlue;
       position: fixed;
       left: 0;
       top: 0;
