--- a/index.html
+++ b/index.html
@@ -170,5 +170,6 @@
     </div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="/static/js/ribbonsEffect.js"></script>
   </body>
 </html>
